# planar

./: .gitignore  Cargo.toml  jsconfig.json  package-lock.json  package.json
migrations/: 20250207155420_initial.sql  20250216165550_initial.sql
public/css/: board.css
public/js/: board.js
public/js/lib/: interactions.js  utils.js
scripts/: rundev.sh
src/: auth.rs  error.rs  errors.rs  fields.rs  main.rs  models.rs  queries.rs  routes.rs  templates.rs  utils.rs
src/auth/: forms.rs  routes.rs  templates.rs
static/css/: board.css
static/js/: board.js
templates/: base.html  board.html  error.html  landing.html
templates/auth/partial/: signin.html  signup.html
templates/board/: column.html  index.html
